# Playground

./: .env.example  .gitignore  ARCHITECTURE_GUIDE.md  LICENSE  README.md  analytics.py  config.py  league_system.py  league_tables.json  league_tables_starter.json  manage_league.py  model_config.py  model_teams_config.json  plot_expander.py  plot_expander_design.md  plot_expander_langchain.py  plot_viewer.py  plots.py  project_requirements.md  pyproject.toml  requirements.txt  schemas.py  team_manager.py  test_format_standardization.py  test_model_formats.py  test_plot_expander.py  test_setup.py  test_single_plot.py  test_structured_output.py  test_team_improvements.py  test_voting.py  test_voting_distribution.py  test_voting_diversity.py  test_voting_summary.py  voting_strategies.py
research/: character-arc-types.md  langgraph-multi-agent.md  story-endings-types.md  story-structure-beats.md  story-wants-vs-needs.md
teams/: __init__.py  cosmic_storytellers.py  echo_chamber.py  mythic_forge.py  neural_narratives.py  quantum_plotters.py
voters/: __init__.py  architect_prime.py  base_voter.py  edge_walker.py  genre_maven.py  mind_reader.py  pulse_checker.py  the_curator.py  time_sage.py  trend_prophet.py  voice_whisperer.py  wisdom_keeper.py  world_builder.py
